crates/top/re_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.blueprint.archetypes.LineGrid3D.snap
---
source: crates/top/re_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
visible: [true]
spacing: [1.0]
plane: [[0.0, 0.0, 0.0, 0.0]]
stroke_width: [8.0]
color: [3161148927]
