crates/top/re_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.blueprint.archetypes.PlotInteraction.snap
---
source: crates/top/re_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
tooltip_mode: [1]
points_display: [1]
